force-app/main/default/objects/QTB_VertexServiceConfigs__c/QTB_VertexServiceConfigs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings used for storing the Salesforce to Vertex integration details</description>
    <label>VertexServiceConfigs</label>
</CustomObject>