force-app/main/default/objects/QTB_VertexServiceConfigs__c/fields/QTB_ClientKey__c.field-meta.xml
<CustomField>
    <fullName>QTB_ClientKey__c</fullName>
    <label>Client Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>