force-app/main/default/objects/QTB_VertexServiceConfigs__c/fields/QTB_ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>QTB_ClientSecret__c</fullName>
    <label>Client Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>