force-app/main/default/objects/QTB_VertexServiceConfigs__c/fields/QTB_EndpointAuthURL__c.field-meta.xml
<CustomField>
    <fullName>QTB_EndpointAuthURL__c</fullName>
    <label>Endpoint Auth URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>