force-app/main/default/objects/QTB_VertexServiceConfigs__c/fields/QTB_EndpointCalculateTaxURL__c.field-meta.xml
<CustomField>
    <fullName>QTB_EndpointCalculateTaxURL__c</fullName>
    <label>Endpoint Calculate Tax URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>