force-app/main/default/objects/QTB_VertexServiceConfigs__c/fields/QTB_IRM_APP_ID__c.field-meta.xml
<CustomField>
    <fullName>QTB_IRM_APP_ID__c</fullName>
    <label>IRM APP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>