force-app/main/default/objects/QTB_VertexServiceConfigs__c/fields/QTB_MAX_REQUEST_TIMEOUT__c.field-meta.xml
<CustomField>
    <fullName>QTB_MAX_REQUEST_TIMEOUT__c</fullName>
    <label>MAX REQUEST TIMEOUT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>