force-app/main/default/objects/QTB_VertexServiceConfigs__c/fields/QTB_Password__c.field-meta.xml
<CustomField>
    <fullName>QTB_Password__c</fullName>
    <label>Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>