force-app/main/default/objects/QTB_VertexServiceConfigs__c/fields/QTB_TrustedId__c.field-meta.xml
<CustomField>
    <fullName>QTB_TrustedId__c</fullName>
    <label>Trusted Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>