force-app/main/default/objects/QTB_VertexServiceConfigs__c/fields/QTB_UserName__c.field-meta.xml
<CustomField>
    <fullName>QTB_UserName__c</fullName>
    <label>User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>